--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-quiz",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://anpiet.github.io/react-quiz",
+  "homepage": "https://anpiet.github.io/react-quiz/",
   "dependencies": {
     "@supabase/supabase-js": "^2.38.0",
     "@testing-library/jest-dom": "^5.17.0",
